# MLOps_DTU

./: .gitattributes  .gitignore  Makefile  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requests_file.py  requirements.txt
.dvc/: config
data/processed/: normalized_train_set.pt
data/raw/: .gitignore  train_images_0.pt.dvc
data/raw/.dvc/: config
dockerfiles/: trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: checkpoint.pth
src/: __init__.py  predict_model.py  train_model.py
src/data/: make_dataset.py
src/models/: model.py
