[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MLOps_DTU"
version = "0.0.1"
description = "MLOps course at DTU"
authors = [
  { name = "lukydexter", email = "luky@outlook.it" },
]

readme = "README.md"
requires-python = "~=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]

select = ["I"]
line-length = 120
